# CarTunes

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  renovate.json
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: sync-backend-requirements.yml
backend/: .gitignore  app.py  config.example.yml  line_bot.py  main.py  models.py  pyproject.toml  requirements.txt  room_manager.py  run.bat  setup.bat  utilities.py  websocket_manager.py
backend/innertube/: audio_cache.py  audio_extractor.py  quick_play.py  recommendations.py  search.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/room/[roomId]/: page.tsx
frontend/app/share/: page.tsx
frontend/components/: autoplay-toggle.tsx
frontend/components/ui/: badge.tsx  button.tsx  input-otp.tsx  modal.tsx  toggle.tsx
frontend/hooks/: use-websocket.ts
frontend/lib/: audio-loader.ts  config.ts  utils.ts
